install sudo-ldap, change sudo ldap server address

--- a/configs/ldap-client/ldap.conf
+++ b/configs/ldap-client/ldap.conf
@@ -13,7 +13,7 @@
 #DEREF          never
 
 
-URI     ldap://%hostname%.netsoc.dit.ie
+URI     ldap://timmy.netsoc.dit.ie
 
 sudoers_base ou=sudoers,ou=admin,dc=netsoc,dc=dit,dc=ie
 BINDDN cn=%hostname%,ou=sudousers,ou=admin,dc=netsoc,dc=dit,dc=ie
