moved all config dirs with "2" in it to one and changed references in setup scripts. not tested

--- a/configs/ldap-client/ldap.conf
+++ b/configs/ldap-client/ldap.conf
@@ -13,12 +13,12 @@
 #DEREF          never
 
 
-URI     ldap://timmy.netsoc.dit.ie
+URI     ldap://ldap.netsoc.dit.ie
 
-sudoers_base ou=sudoers,ou=admin,dc=netsoc,dc=dit,dc=ie
-BINDDN cn=%hostname%,ou=sudousers,ou=admin,dc=netsoc,dc=dit,dc=ie
+sudoers_base ou=sudoers,dc=netsoc,dc=dit,dc=ie
+BINDDN cn=sudo,ou=%hostname%,ou=machines,dc=netsoc,dc=dit,dc=ie
 BINDPW %sudopassword% 
 
 
-TLS_CACERT /etc/ldap/ca.crt
-TLS_REQCERT hard
+#TLS_CACERT /etc/ldap/ca.crt
+#TLS_REQCERT hard
