--- a/configs/ldap-client/nslcd.conf
+++ b/configs/ldap-client/nslcd.conf
@@ -7,27 +7,30 @@ uid nslcd
 gid nslcd
 
 # The location at which the LDAP server(s) should be reachable.
-uri ldap://timmy.netsoc.dit.ie
+uri ldap://ldap.netsoc.dit.ie
+
+
+filter passwd (objectClass=netsocUser)
+filter shadow (objectClass=netsocUser)
 
 # The search base that will be used for all queries.
-base cn=guests,ou=users,dc=netsoc,dc=dit,dc=ie
-base cn=members,ou=users,dc=netsoc,dc=dit,dc=ie
-base ou=groups,ou=users,dc=netsoc,dc=dit,dc=ie
+base ou=members,ou=users,dc=netsoc,dc=dit,dc=ie
+base ou=groups,dc=netsoc,dc=dit,dc=ie
 
 
 # The LDAP protocol version to use.
-#ldap_version 3
+ldap_version 3
 
 # The DN to bind with for normal lookups.
-binddn cn=%hostname%,ou=nssusers,ou=admin,dc=netsoc,dc=dit,dc=ie
+binddn cn=nslcd,ou=%hostname%,ou=machines,dc=netsoc,dc=dit,dc=ie
 bindpw %nslcdpassword%
 
 # The DN used for password modifications by root.
 #rootpwmoddn cn=admin,dc=example,dc=com
 
-ssl start_tls
-tls_cacertfile /etc/ldap/ca.crt
-tls_reqcert demand
+#ssl start_tls
+#tls_cacertfile /etc/ldap/ca.crt
+#tls_reqcert demand
 
 # The search scope.
 #scope sub
