added immutable option to nslcd.conf to prevent debian update mangling the config file

--- a/configs/ldap-client/nslcd.conf
+++ b/configs/ldap-client/nslcd.conf
@@ -2,6 +2,13 @@
 # nslcd configuration file. See nslcd.conf(5)
 # for details.
 
+# README !!!!
+# This file should be set to immutable (chattr +i/-i) to prevent
+# debian's broken script from mangling the config file when we upgrade
+# This is taken off and put back on when we run serversetup scripts
+# This is one example http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=700971 
+# but there are many more throughout the history of nslcd package
+
 # The user and group nslcd should run as.
 uid nslcd
 gid nslcd
