added in group + passwd to base in nslcd.conf
In the event of any more nslcd upgrades, this may prevent mangling
this was told to me as a casual response in debian bug #700971

--- a/configs/ldap-client/nslcd.conf
+++ b/configs/ldap-client/nslcd.conf
@@ -21,8 +21,8 @@ filter passwd (objectClass=netsocUser)
 filter shadow (objectClass=netsocUser)
 
 # The search base that will be used for all queries.
-base ou=members,ou=users,dc=netsoc,dc=dit,dc=ie
-base ou=groups,dc=netsoc,dc=dit,dc=ie
+base passwd ou=members,ou=users,dc=netsoc,dc=dit,dc=ie
+base group ou=groups,dc=netsoc,dc=dit,dc=ie
 
 
 # The LDAP protocol version to use.
